# qetl

./: README.md
.github/workflows/: ci.yml  dependencies.yml
qetl-sdk/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
qetl-sdk/examples/: basic_usage.py  sdk_demo.py
qetl-sdk/src/qetl_sdk/: __init__.py  builder.py  cli.py  client.py  cloud_client.py  exceptions.py  job.py  local_runner.py
qetl-sdk/src/qetl_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qetl-sdk/tests/: test_client.py  test_job_builder.py
